--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,38 +1,82 @@
 workflows:
-  android-build:
-    name: Android Build (Control Panel)
-    working_directory: apps/admin_console
+  control-panel-android:
+    name: Control Panel Android Build
+    max_build_duration: 60
+    instance_type: mac_mini_m1
     environment:
+      groups:
+        - google_play
+      vars:
+        PACKAGE_NAME: "com.controlpanel.control_panel_flutter_app"
       flutter: stable
       xcode: latest
-      cocoapods: 1.16.2
-      java: 17
-    triggering:
-      events:
-        - push
-      branch_patterns:
-        - pattern: main
-          include: true
-          source: true
+      cocoapods: default
     scripts:
-      - name: Set up Flutter and Android
+      - name: Set up local.properties
         script: |
-          # Ensure gradlew exists and has execute permissions
-          if [ ! -f "android/gradlew" ]; then
-            echo "gradlew not found, attempting to generate..."
-            flutter build apk --debug # This command usually generates gradlew
-          fi
-          chmod +x android/gradlew
-
-          flutter clean
-          flutter pub get
-          flutter doctor -v
-          android/gradlew clean --no-daemon
-      - name: Build Android
+          echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+      - name: Get Flutter packages
         script: |
-          flutter build apk --debug
+          flutter packages pub get
+      - name: Flutter analyze
+        script: |
+          flutter analyze
+      - name: Flutter test
+        script: |
+          flutter test
+      - name: Build APK with Flutter
+        script: |
+          flutter build apk --release
     artifacts:
-      - build/app/outputs/**/*.apk
+      - build/**/outputs/**/*.apk
+      - build/**/outputs/**/*.aab
+      - build/**/outputs/**/mapping.txt
+      - flutter_drive.log
+    publishing:
+      email:
+        recipients:
+          - ibrahimalsattouf88@gmail.com
+        notify:
+          success: true
+          failure: true
+
+  control-panel-ios:
+    name: Control Panel iOS Build
+    max_build_duration: 60
+    instance_type: mac_mini_m1
+    environment:
+      groups:
+        - app_store_credentials
+      vars:
+        PACKAGE_NAME: "com.controlpanel.control_panel_flutter_app"
+        XCODE_WORKSPACE: "Runner.xcworkspace"
+        XCODE_SCHEME: "Runner"
+      flutter: stable
+      xcode: latest
+      cocoapods: default
+    scripts:
+      - name: Set up code signing settings on Xcode project
+        script: |
+          xcode-project use-profiles
+      - name: Get Flutter packages
+        script: |
+          flutter packages pub get
+      - name: Install pods
+        script: |
+          find . -name "Podfile" -execdir pod install \;
+      - name: Flutter analyze
+        script: |
+          flutter analyze
+      - name: Flutter test
+        script: |
+          flutter test
+      - name: Build ipa for distribution
+        script: |
+          flutter build ipa --release --export-options-plist=/Users/builder/export_options.plist
+    artifacts:
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - flutter_drive.log
     publishing:
       email:
         recipients:
