--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.smart_assistant_app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <!-- أذونات أساسية -->
   <uses-permission android:name="android.permission.INTERNET"/>
@@ -11,6 +10,7 @@
     android:name="${applicationName}"
     android:icon="@mipmap/ic_launcher"
     android:usesCleartextTraffic="true">
+
     <activity
       android:name=".MainActivity"
       android:exported="true"
@@ -19,14 +19,13 @@
       android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
       android:hardwareAccelerated="true"
       android:windowSoftInputMode="adjustResize">
-      <!-- ديب لينك افتراضي -->
+
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
 
-    <!-- تمكين Flutter -->
     <meta-data android:name="flutterEmbedding" android:value="2" />
   </application>
 </manifest>
